@@ -4,13 +4,65 @@ plugins {
     id 'com.github.ben-manes.versions' version '0.39.0'
     id 'net.minecraftforge.gradleutils' version '2.+'
     id 'me.champeau.jmh' version '0.6.5'
-    id 'org.javamodularity.moduleplugin' version '1.8.7' apply false
 }
 
-apply plugin: 'java-library'
 apply plugin: 'maven-publish'
-apply plugin: 'eclipse'
-apply plugin: 'org.javamodularity.moduleplugin'
+
+ext.asmVersion = 9.1
+
+allprojects {
+    apply plugin: 'java-library'
+    apply plugin: 'eclipse'
+
+    group = 'cpw.mods'
+    java {
+        toolchain.languageVersion = JavaLanguageVersion.of(16)
+        withSourcesJar()
+    }
+    //compileJava {
+    //    sourceCompatibility = JavaVersion.VERSION_16
+    //    targetCompatibility = JavaVersion.VERSION_16
+    //}
+
+
+    test {
+        useJUnitPlatform()
+    }
+
+    configurations {
+        tWorkaround
+        testCompileOnly {
+            // for some reason, test-only project dependencies aren't registered properly due to an issue with the jmh plugin
+            // so we have our own extra configuration
+            // see https://github.com/melix/jmh-gradle-plugin/issues/216 for details
+            extendsFrom tWorkaround
+        }
+    }
+
+    eclipse {
+        project {
+            if (!project.name.startsWith("${rootProject.name}")) {
+                name = "${rootProject.name}-${project.name}"
+            }
+        }
+        classpath {
+            plusConfigurations << configurations.tWorkaround // fix handling of test-only dep
+            file.whenMerged { classpath ->
+                classpath.entries.each { entry ->
+                    if (entry instanceof org.gradle.plugins.ide.eclipse.model.Library
+                        || entry instanceof org.gradle.plugins.ide.eclipse.model.ProjectDependency) {
+                        entry.entryAttributes['module'] = true
+                    } else if (entry instanceof org.gradle.plugins.ide.eclipse.model.SourceFolder) {
+                        def extraReads = ['org.junit.jupiter.api', 'powermock.core', 'powermock.reflect', 'cpw.mods.modlauncher.testjars']
+                            .collect { "cpw.mods.modlauncher=$it" }
+                            .join(':')
+                        entry.entryAttributes['add-reads'] = extraReads
+                    }
+                }
+            }
+        }
+    }
+}
 
 repositories {
     mavenLocal()
@@ -18,10 +70,6 @@ repositories {
         name = 'forge'
         url = 'https://maven.minecraftforge.net/'
     }
-}
-
-sourceSets {
-    testJars
 }
 
 def isNonStable = { String version ->
@@ -39,22 +87,17 @@ dependencyUpdates {
 test {
     // exclude all tests for now
     exclude '**/*'
-    useJUnitPlatform()
 }
 
 compileTestJava {
     // exclude all tests - not compatible with modular system
     exclude '/**/*'
+
+    options.compilerArgs << '--add-modules' << 'ALL-MODULE-PATH' // for tests, we don't have a separate module descriptor, so just read everything
 }
 
 group = 'cpw.mods'
 ext.asmVersion = 9.2
-
-java.toolchain.languageVersion = JavaLanguageVersion.of(16)
-//compileJava {
-//    sourceCompatibility = JavaVersion.VERSION_16
-//    targetCompatibility = JavaVersion.VERSION_16
-//}
 
 version = gradleutils.getTagOffsetVersion()
 logger.lifecycle('Version: ' + version)
@@ -72,7 +115,7 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.+')
     testImplementation('org.powermock:powermock-core:2.0.+')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.+')
-    testCompileOnly(sourceSets.testJars.output)
+    tWorkaround(project(':testjars'))
     testCompileOnly('org.jetbrains:annotations:21.0.1')
     testRuntimeOnly('cpw.mods:bootstraplauncher:0.1.+')
     jmhImplementation('org.powermock:powermock-core:2.0.+')
@@ -82,16 +125,6 @@ dependencies {
     jmh("org.ow2.asm:asm:${asmVersion}")
     jmh('org.openjdk.jmh:jmh-core:1.32')
     jmh('org.openjdk.jmh:jmh-generator-bytecode:1.31')
-}
-
-task testsJar(type: Jar) {
-    archiveClassifier = 'testsjar'
-    from sourceSets.testJars.output
-}
-
-task sourcesJar(type: Jar) {
-    archiveClassifier = 'sources'
-    from sourceSets.main.allSource
 }
 
 jmh {
@@ -134,26 +167,29 @@ ext.sharedManifest = manifest {
 }
 
 jar {
-    manifest = project.manifest {
+    manifest = project.java.manifest {
         from sharedManifest
     }
 }
 
 tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
     options.compilerArgs << '-Xlint:unchecked'
 }
 
-artifacts {
-    archives testsJar
-    archives jar
-    archives sourcesJar
+compileJava {
+    options.javaModuleVersion = project.version.toString()
+    options.javaModuleMainClass = 'cpw.mods.modlauncher.Launcher'
+
+    doFirst {
+        options.compilerArgs << '--module-path' << classpath.asPath
+    }
 }
 
 publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
-            artifact sourcesJar
             pom {
                 name = 'Mod Launcher'
                 description = 'Common ModLauncher framework'
